--- a/RelationshipCalculator/RelationshipCalculator/App.xaml
+++ b/RelationshipCalculator/RelationshipCalculator/App.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:RelationshipCalculator"
-    RequestedTheme="Light">
+    RequestedTheme="Light"
+    StartupUri ="View/MainPage.xaml">
 
 </Application>
