--- a/RelationshipCalculator/RelationshipCalculator/View/MainPage.xaml
+++ b/RelationshipCalculator/RelationshipCalculator/View/MainPage.xaml
@@ -7,93 +7,94 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Button FontFamily="Segoe MDL2 Assets" Content="&#xE700;" VerticalAlignment="Top" Width="50" Height="50" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"/>
+    <Page.Resources>
+        <!--菜单的数据模板-->
+        <DataTemplate x:Key="DataTemplate">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="48" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
 
-        <SplitView x:Name="MySplit" IsPaneOpen="False" DisplayMode="CompactOverlay" OpenPaneLength="195">
+                <Rectangle Fill="{ThemeResource SystemControlBackgroundAccentBrush}" 
+                           Visibility="{Binding Selected, Mode=TwoWay}" 
+                           HorizontalAlignment="Left" Width="5" Height="48" />
+
+                <FontIcon FontFamily="{Binding FontFamily}" Glyph="{Binding Icon}" Foreground="White" 
+                          VerticalAlignment="Center" 
+                          Margin="-2,0,0,0" Width="48" Height="48" />
+
+                <TextBlock Grid.Column="1" 
+                           Text="{Binding Label}" Foreground="White" 
+                           Margin="12,0,0,0" VerticalAlignment="Center" />
+            </Grid>
+        </DataTemplate>
+        <!--ListViewItem样式定制-->
+        <Style x:Key="NavMenuItemContainerStyle" TargetType="ListViewItem">
+            <Setter Property="MinWidth" Value="{StaticResource SplitViewCompactPaneThemeLength}"/>
+            <Setter Property="Height" Value="48"/>
+            <Setter Property="Padding" Value="0"/>
+            <Setter Property="UseSystemFocusVisuals" Value="True" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ListViewItem">
+                        <ListViewItemPresenter ContentTransitions="{TemplateBinding ContentTransitions}"
+                        Control.IsTemplateFocusTarget="True"
+                        SelectionCheckMarkVisualEnabled="False"
+                        PointerOverBackground="{ThemeResource SystemControlHighlightListLowBrush}"
+                        PointerOverForeground="{ThemeResource ListViewItemForegroundPointerOver}"
+                        SelectedBackground="Transparent"
+                        SelectedForeground="{ThemeResource SystemControlForegroundAccentBrush}"
+                        SelectedPointerOverBackground="{ThemeResource SystemControlHighlightListLowBrush}"
+                        PressedBackground="{ThemeResource SystemControlHighlightListMediumBrush}"
+                        SelectedPressedBackground="{ThemeResource SystemControlHighlightListMediumBrush}"
+                        DisabledOpacity="{ThemeResource ListViewItemDisabledThemeOpacity}"
+                        HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                        VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                        ContentMargin="{TemplateBinding Padding}"/>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Page.Resources>
+
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <!--汉堡菜单开关-->
+        <Button Name="PaneOpenButton" 
+                FontFamily="Segoe MDL2 Assets" Content="&#xE700;" Foreground="White" 
+                Background="{Binding BackgroundColor}" 
+                Width="48" Height="48" 
+                VerticalAlignment="Top" Canvas.ZIndex="100" />
+
+        <SplitView Name="RootSplitView" 
+                   DisplayMode="CompactOverlay" 
+                   CompactPaneLength="48" OpenPaneLength="256" 
+                   IsPaneOpen="False">
+
             <SplitView.Pane>
-                <StackPanel Background="Gray">
-                    <Button Background="Gray" FontFamily="Segoe MDL2 Assets" Content="&#xE700;" VerticalAlignment="Top" Width="50" Height="50"/>
-                    <ListView x:Name="listView1" Margin="-10,0,0,0">
-                        <ListView.ItemTemplate>
-                            <DataTemplate x:DataType="x:String">
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="54"/>
-                                        <ColumnDefinition/>
-                                    </Grid.ColumnDefinitions>
-                                    <Image Source="Assets/StoreLogo.png" Width="40" Height="40" HorizontalAlignment="Left"/>
-                                    <TextBlock Text="{x:Bind}" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Black" FontSize="18" Grid.Column="1"/>
-                                </Grid>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                        <x:String>我称呼ta</x:String>
-                        <x:String>ta称呼我</x:String>
-                        <x:String>中国亲戚名称</x:String>
-                        <x:String>关于</x:String>
-                    </ListView>
-                </StackPanel>
+                <Grid Background="#CC000000">
+                    <Grid.RowDefinitions>
+                        <!--空出Button的高度-->
+                        <RowDefinition Height="48" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <!--一级菜单-->
+                    <ListView Name="NavMenuPrimaryListView" 
+                              Grid.Row="1" VerticalAlignment="Top" 
+                              SelectionMode="None" IsItemClickEnabled="True" 
+                              ItemTemplate="{StaticResource DataTemplate}" 
+                              ItemContainerStyle="{StaticResource NavMenuItemContainerStyle}"/>
+
+                </Grid>
             </SplitView.Pane>
 
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="2*"/>
-                    <RowDefinition Height="3*"/>
-                </Grid.RowDefinitions>
+            <SplitView.Content>
+                <Frame Name="RootFrame" />
+            </SplitView.Content>
 
-                <Grid Grid.Row="0">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="6*"/>
-                        <RowDefinition Height="1*"/>
-                    </Grid.RowDefinitions>
-
-                    <Grid Grid.Row="0">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="1*"/>
-                            <RowDefinition Height="1*"/>
-                        </Grid.RowDefinitions>
-
-                        <TextBlock x:Name="Input_text" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20">
-                            <Run Foreground="Gray" Text="欢迎使用亲戚称呼计算器..."/>
-                        </TextBlock>
-
-                        <TextBlock x:Name="Result_text" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20">
-                            <Run Foreground="LightGreen" Text=""/>
-                        </TextBlock>
-                    </Grid>
-
-                    <Grid Background="LightGray" Grid.Row="1" Margin="0,-10,0,0">
-                        <ToggleSwitch HorizontalAlignment="Left" VerticalAlignment="Center" Margin="20,-4,0,0"/>
-                    </Grid>
-                </Grid>
-
-                <Grid x:Name="Button_Area" Grid.Row="1">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="1*"/>
-                        <RowDefinition Height="1*"/>
-                        <RowDefinition Height="1*"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="1*"/>
-                        <ColumnDefinition Width="1*"/>
-                        <ColumnDefinition Width="1*"/>
-                        <ColumnDefinition Width="1*"/>
-                    </Grid.ColumnDefinitions>
-
-                    <Button Grid.Row="0" Grid.Column="0" Content="父" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
-                    <Button Grid.Row="0" Grid.Column="1" Content="母" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
-                    <Button Grid.Row="0" Grid.Column="2" Content="姐" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24" Background="#33000000"/>
-                    <Button Grid.Row="2" Grid.Column="2" Content="清空" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24" Background="#FF4B968C"/>
-                    <Button Grid.Row="1" Grid.Column="0" Content="兄"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
-                    <Button Grid.Row="1" Grid.Column="1" Content="弟"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
-                    <Button Grid.Row="1" Grid.Column="2" Content="妹"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
-                    <Button Grid.Row="2" Grid.Column="0" Content="子"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
-                    <Button Grid.Row="2" Grid.Column="1" Content="女"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
-                    <Button Grid.Row="2" Grid.Column="3" Content="计算" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24" Background="#FFEF0129"/>
-                    <Button Grid.Row="0" Grid.Column="3" Content="夫"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
-                    <Button Grid.Row="1" Grid.Column="3" Content="妻"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24" BorderThickness="0,0,2,0" BorderBrush="#102836"/>
-                </Grid>
-            </Grid>
         </SplitView>
+
     </Grid>
+
 </Page>
