Implement Views and ViewModels Binding

--- a/RelationshipCalculator/RelationshipCalculator/View/CalculatorView.xaml
+++ b/RelationshipCalculator/RelationshipCalculator/View/CalculatorView.xaml
@@ -27,9 +27,13 @@
                         <RowDefinition Height="1*"/>
                     </Grid.RowDefinitions>
 
-                    <TextBlock x:Name="Input_text" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20">
-                            <Run Foreground="Gray" Text="欢迎使用亲戚称呼计算器..."/>
-                    </TextBlock>
+                    <TextBlock x:Name="Input_text" 
+                               Grid.Row="0" 
+                               HorizontalAlignment="Center" 
+                               VerticalAlignment="Center" 
+                               FontSize="20"
+                               Text="{Binding Path=Display,Mode=TwoWay}"/>
+
 
                     <TextBlock x:Name="Result_text" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20">
                             <Run Foreground="LightGreen" Text=""/>
@@ -59,18 +63,18 @@
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
 
-                <Button Grid.Row="0" Grid.Column="0" Content="父" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
-                <Button Grid.Row="0" Grid.Column="1" Content="母" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
-                <Button Grid.Row="0" Grid.Column="2" Content="姐" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24" Background="#33000000"/>
-                <Button Grid.Row="2" Grid.Column="2" Content="清空" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24" Background="#FF4B968C"/>
-                <Button Grid.Row="1" Grid.Column="0" Content="兄"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
-                <Button Grid.Row="1" Grid.Column="1" Content="弟"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
-                <Button Grid.Row="1" Grid.Column="2" Content="妹"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
-                <Button Grid.Row="2" Grid.Column="0" Content="子"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
-                <Button Grid.Row="2" Grid.Column="1" Content="女"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
-                <Button Grid.Row="2" Grid.Column="3" Content="计算" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24" Background="#FFEF0129"/>
-                <Button Grid.Row="0" Grid.Column="3" Content="夫"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
-                <Button Grid.Row="1" Grid.Column="3" Content="妻"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24" BorderThickness="0,0,2,0" BorderBrush="#102836"/>
+                <Button Command="{Binding GeneralCommand}" CommandParameter="父" Grid.Row="0" Grid.Column="0" Content="父" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
+                <Button Command="{Binding GeneralCommand}" CommandParameter="母" Grid.Row="0" Grid.Column="1" Content="母" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
+                <Button Command="{Binding GeneralCommand}" CommandParameter="姐" Grid.Row="0" Grid.Column="2" Content="姐" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
+                <Button Command="{Binding GeneralCommand}" CommandParameter="清空" Grid.Row="2" Grid.Column="2" Content="清空" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24" Background="#FF4B968C"/>
+                <Button Command="{Binding GeneralCommand}" CommandParameter="兄" Grid.Row="1" Grid.Column="0" Content="兄"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
+                <Button Command="{Binding GeneralCommand}" CommandParameter="弟" Grid.Row="1" Grid.Column="1" Content="弟"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
+                <Button Command="{Binding GeneralCommand}" CommandParameter="妹" Grid.Row="1" Grid.Column="2" Content="妹"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
+                <Button Command="{Binding GeneralCommand}" CommandParameter="子" Grid.Row="2" Grid.Column="0" Content="子"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
+                <Button Command="{Binding GeneralCommand}" CommandParameter="女" Grid.Row="2" Grid.Column="1" Content="女"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
+                <Button Command="{Binding CalculateCommand}" Grid.Row="2" Grid.Column="3" Content="计算" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24" Background="#FFEF0129"/>
+                <Button Command="{Binding GeneralCommand}" CommandParameter="夫" Grid.Row="0" Grid.Column="3" Content="夫"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
+                <Button Command="{Binding GeneralCommand}" CommandParameter="妻" Grid.Row="1" Grid.Column="3" Content="妻"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  FontSize="24"/>
             </Grid>
         </Grid>
         
