--- a/RelationshipCalculator/RelationshipCalculator/View/CalculatorView.xaml
+++ b/RelationshipCalculator/RelationshipCalculator/View/CalculatorView.xaml
@@ -27,21 +27,26 @@
                         <RowDefinition Height="1*"/>
                     </Grid.RowDefinitions>
 
-                    <TextBlock x:Name="Input_text" 
-                               Grid.Row="0" 
-                               HorizontalAlignment="Center" 
-                               VerticalAlignment="Center" 
-                               FontSize="20"
-                               Text="{Binding Path=Display,Mode=TwoWay}"/>
+                    <ScrollViewer VerticalScrollBarVisibility="Auto">
+                        <TextBlock x:Name="Input_text" 
+                                   TextWrapping="Wrap"
+                                   Grid.Row="0" 
+                                   HorizontalAlignment="Center" 
+                                   VerticalAlignment="Center" 
+                                   FontSize="20"
+                                   Text="{Binding Path=Display,Mode=TwoWay}"/>
+                    </ScrollViewer>
 
 
                     <TextBlock x:Name="Result_text" 
-                               Grid.Row="1" HorizontalAlignment="Center" 
-                               VerticalAlignment="Center" 
-                               FontSize="20">
+                                   TextWrapping="Wrap"
+                                   Grid.Row="1" HorizontalAlignment="Center" 
+                                   VerticalAlignment="Center" 
+                                   FontSize="20">
                             <Run Foreground="LightGreen" 
                                  Text="{Binding Path=ResultText,Mode=TwoWay}"/>
                     </TextBlock>
+
                 </Grid>
 
                 <Grid Background="LightGray" Grid.Row="1" Margin="0,-10,0,0">
